--- a/templates/admin_manage.html
+++ b/templates/admin_manage.html
@@ -144,7 +144,7 @@
     <button type="submit" class="btn btn-primary">Add Role</button>
 </form>
 
-<h3>Edit or Remove Roles</h3>
+<h3>Edit or Remove Roles (Must Total 100%)</h3>
 <ul>
     {% for role in roles %}
     <li>
@@ -174,12 +174,6 @@
         <label for="bonus_percent" class="form-label">Bonus % of Sales Amount:</label>
         <input type="number" step="0.1" class="form-control" id="bonus_percent" name="bonus_percent" value="{{ pot_info.get('bonus_percent', 0) }}" required>
     </div>
-    {% for role in roles %}
-    <div class="mb-3">
-        <label for="{{ role.role_name }}_percent" class="form-label">{{ role.role_name|capitalize }} % of Pot:</label>
-        <input type="number" step="0.1" class="form-control" id="{{ role.role_name }}_percent" name="{{ role.role_name }}_percent" value="{{ pot_info.get(role.role_name + '_percent', role.percentage) }}" required>
-    </div>
-    {% endfor %}
     <button type="submit" class="btn btn-primary">Update Pot</button>
 </form>
 
